--- a/bpe-codes/README
+++ b/bpe-codes/README
@@ -4,4 +4,5 @@ Files:
 * cross_occurences_<n>_<m>.txt - contains a list of pairs (<merge> <occurrences>) which shows that merge <merge> is present in <occurences> <n>-percent chunks; only first <m> merges are taken;
 * cross_occurences_summary_<n>_<m>.txt contains a list of pairs (<occurences> <merge_percent>) which show that on average between all the <n>-percent chunks, <merge_percent> percent of merges occur in <occurences> lists; only first <m> merges are taken;
 * cooccurence_matrix_<n>_<m>.csv - contains a matrix[i, j] where element [i,j] is the percent of merges that is found both in i-th and j-th <n>-percent chunks ; only first <m> merges are taken;
-* cooccurence_matrix_<n>_<m1>_<m2>.csv - contains a matrix[i, j] where element [i,j] is the percent of merges that is found both in <m1> first merges of i-th and <m2> first merges of j-th <n>-percent chunks.
+* cooccurence_matrix_<n>_<m1>_<m2>.csv - contains a matrix where element [i,j] is the percent of merges that is found both in <m1> first merges of i-th and <m2> first merges of j-th <n>-percent chunks;
+* corpus_size_matrix_<n>_<m>.csv - contains a matrix where element [i,j] is the number of tokens in <i>-th <n>-percent chunk which was preprocessed using bpe merges built on <j>-th chunk devided by the number of tokens in the same chunk preprocessed using bpe merges built on <i>-th chunk; only first <m> merges are taken.
