--- a/metrics/results.ipynb
+++ b/metrics/results.ipynb
@@ -2853,9 +2853,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "log-recommender-dataprep",
    "language": "python",
-   "name": "python3"
+   "name": "log-recommender-dataprep"
   },
   "language_info": {
    "codemirror_mode": {
