--- a/metrics/results.ipynb
+++ b/metrics/results.ipynb
@@ -45,13 +45,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from metrics.vector import pearson, cooccurences, convert_to_vectors\n",
-    "from metrics.merge import Merge, read_merges\n",
-    "from metrics.matrix import pearson_matrix, cooccurence_matrix\n",
-    "from collections import defaultdict, Counter\n",
     "import os\n",
     "from pandas import DataFrame\n",
-    "from typing import List"
+    "from typing import List\n",
+    "\n",
+    "from metrics.vector import pearson\n",
+    "from metrics.merge import Merge, read_merges\n",
+    "from metrics.matrix import pearson_matrix, cooccurence_matrix"
    ]
   },
   {
