add multilang n token stats for different languages

--- a/metrics/multilang.ipynb
+++ b/metrics/multilang.ipynb
@@ -66,6 +66,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N tokens - Multilang corpus (basic splitting)\n",
+      "Java: 91420k\n",
+      "Python: 7668k\n",
+      "c: 37165k\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "source ~/.bashrc\n",
+    "\n",
+    "BASIC_PREP_DATASETS_DIR=\"$HOME/.cache/dataprep/1.0.0-alpha.0/prep_datasets\"\n",
+    "\n",
+    "echo \"N tokens - Multilang corpus (basic splitting)\"\n",
+    "j=$(tc \"$BASIC_PREP_DATASETS_DIR/multilang_19-05-31T17-50-18_00100/java\")\n",
+    "echo \"Java: $(( j / 1000 ))k\"\n",
+    "p=$(tc \"$BASIC_PREP_DATASETS_DIR/multilang_19-05-31T17-50-18_00100/python\")\n",
+    "echo \"Python: $(( p / 1000 ))k\"\n",
+    "c=$(tc \"$BASIC_PREP_DATASETS_DIR/multilang_19-05-31T17-50-18_00100/c\")\n",
+    "echo \"c: $(( c / 1000 ))k\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
