update code to use newer version of dataprep

--- a/metrics/multilang.ipynb
+++ b/metrics/multilang.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "# Python vs Java vs C vs Multilang Experiments"
    ]
   },
@@ -125,11 +126,8 @@
     }
    ],
    "source": [
-    "import os\n",
-    "from metrics.merge import read_merges\n",
     "from metrics.matrix import merge_similarity_rate_matrix\n",
-    "from pandas import DataFrame\n",
-    "\n",
+    "from dataprep.bpepkg.merge import read_merges\n",
     "from dataprep.config import USER_BPE_DIR\n",
     "\n",
     "N_MERGES = 10000\n",
@@ -3864,6 +3862,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.7"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
