add extension as parameter to calc_and_display method

--- a/vocabstudy/java.ipynb
+++ b/vocabstudy/java.ipynb
@@ -23,7 +23,7 @@
     ")\n",
     "\n",
     "def run(prep_function: PrepFunction, description: str) -> None:\n",
-    "    calc_and_display_stats(prep_function, description, JAVA_DATASETS, JAVA_KEYWORDS)\n",
+    "    calc_and_display_stats(prep_function, description, JAVA_DATASETS, JAVA_KEYWORDS, 'java')\n",
     "# %%\n",
     "\n",
     "import dataprep\n",
