--- a/vocabstudy/python.ipynb
+++ b/vocabstudy/python.ipynb
@@ -13,12 +13,12 @@
     "from vocabstudy.common import PrepFunction, calc_and_display_stats\n",
     "PYTHON_KEYWORDS = keyword.kwlist\n",
     "\n",
-    "PYTHON_DATASETS = ('rafae/python-minus-test',\n",
+    "PYTHON_DATASETS = ('rafael/python-minus-test',\n",
     "            'rafael/python-test'\n",
     "           )\n",
     "\n",
     "def run(prep_function: PrepFunction, description: str) -> None:\n",
-    "    calc_and_display_stats(prep_function, description, PYTHON_DATASETS, PYTHON_KEYWORDS)\n",
+    "    calc_and_display_stats(prep_function, description, PYTHON_DATASETS, PYTHON_KEYWORDS, 'python')\n",
     "\n",
     "\n",
     "# %%\n",
