--- a/vocabstudy/c.ipynb
+++ b/vocabstudy/c.ipynb
@@ -21,7 +21,7 @@
     "           )\n",
     "\n",
     "def run(prep_function: PrepFunction, description: str) -> None:\n",
-    "    calc_and_display_stats(prep_function, description, C_DATASETS, C_KEYWORDS)\n",
+    "    calc_and_display_stats(prep_function, description, C_DATASETS, C_KEYWORDS, 'c')\n",
     "\n",
     "\n",
     "# %%\n",
