specifying the right extension python -> py

--- a/vocabstudy/python.ipynb
+++ b/vocabstudy/python.ipynb
@@ -18,7 +18,7 @@
     "           )\n",
     "\n",
     "def run(prep_function: PrepFunction, description: str) -> None:\n",
-    "    calc_and_display_stats(prep_function, description, PYTHON_DATASETS, PYTHON_KEYWORDS, 'python')\n",
+    "    calc_and_display_stats(prep_function, description, PYTHON_DATASETS, PYTHON_KEYWORDS, 'py')\n",
     "\n",
     "\n",
     "# %%\n",
