--- a/vocabstudy/python.ipynb
+++ b/vocabstudy/python.ipynb
@@ -76,8 +76,8 @@
     }
    ],
    "source": [
-    "prep_function = PrepFunction(api.nosplit)\n",
-    "description = \"unsplit, with comments and vocabulary. No filtering.\"\n",
+    "prep_function = PrepFunction(api.nosplit, [], {\"no_unicode\": True})\n",
+    "description = \"unsplit, with comments and vocabulary. Filtering non-ascii.\"\n",
     "\n",
     "run(prep_function, description)"
    ]
@@ -88,8 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_function = PrepFunction(api.nosplit, [], {\"no_unicode\": True, \"no_spaces\": True, \"no_com\": True, \"no_str\": True})\n",
-    "description = \"Filtering  strings (+ comments, + whitespace, + non-ascii)\"\n",
+    "prep_function = PrepFunction(api.nosplit, [], {\"no_unicode\": True, \"no_spaces\": True, \"no_com\": True})\n",
+    "description = \"Filtering  comments ( + whitespace, + non-ascii)\"\n",
     "\n",
     "run(prep_function, description)"
    ]
@@ -138,7 +138,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prep_function = PrepFunction(api.bpe, ['java-bpe-training_nounicode-10000'], {\"no_com\": True, \"max_str_length\": 14})\n",
+    "prep_function = PrepFunction(api.bpe, ['python-bpe-training_nounicode-2000'], {\"no_com\": True, \"max_str_length\": 14})\n",
+    "description = \"bpe 2k Hellendoorn and Devanbu strings no comments\"\n",
+    "run(prep_function, description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_function = PrepFunction(api.bpe, ['python-bpe-training_nounicode-5000'], {\"no_com\": True, \"max_str_length\": 14})\n",
+    "description = \"bpe 5k Hellendoorn and Devanbu strings no comments\"\n",
+    "run(prep_function, description)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prep_function = PrepFunction(api.bpe, ['python-bpe-training_nounicode-10000'], {\"no_com\": True, \"max_str_length\": 14})\n",
     "description = \"bpe 10k Hellendoorn and Devanbu strings no comments\"\n",
     "run(prep_function, description)"
    ]
